2014-08-29  Joseph Pecoraro  <pecoraro@apple.com>

        JavaScriptCore: Use ASCIILiteral where possible
        https://bugs.webkit.org/show_bug.cgi?id=136179

        Reviewed by Michael Saboff.

        General string / character related changes. Use ASCIILiteral where
        possible, jsNontrivialString where possible, and replace string
        literals with character literals in some places.

        No new tests, no changes to functionality.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::nameForRegister):
        * bytecompiler/NodesCodegen.cpp:
        (JSC::PostfixNode::emitBytecode):
        (JSC::PrefixNode::emitBytecode):
        (JSC::AssignErrorNode::emitBytecode):
        (JSC::ForInNode::emitMultiLoopBytecode):
        (JSC::ForOfNode::emitBytecode):
        (JSC::ObjectPatternNode::toString):
        * dfg/DFGFunctionWhitelist.cpp:
        (JSC::DFG::FunctionWhitelist::contains):
        * dfg/DFGOperations.cpp:
        (JSC::DFG::newTypedArrayWithSize):
        (JSC::DFG::newTypedArrayWithOneArgument):
        * inspector/ConsoleMessage.cpp:
        (Inspector::ConsoleMessage::addToFrontend):
        * inspector/InspectorBackendDispatcher.cpp:
        (Inspector::InspectorBackendDispatcher::dispatch):
        * inspector/ScriptCallStackFactory.cpp:
        (Inspector::extractSourceInformationFromException):
        * inspector/scripts/codegen/generator_templates.py:
        * interpreter/StackVisitor.cpp:
        (JSC::StackVisitor::Frame::functionName):
        (JSC::StackVisitor::Frame::sourceURL):
        * jit/JITOperations.cpp:
        * jsc.cpp:
        (functionDescribeArray):
        (functionRun):
        (functionLoad):
        (functionReadFile):
        (functionCheckSyntax):
        (functionTransferArrayBuffer):
        (runWithScripts):
        (runInteractive):
        * parser/Lexer.cpp:
        (JSC::Lexer<T>::invalidCharacterMessage):
        (JSC::Lexer<T>::parseString):